--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "connect-ensure-login": "^0.1.1",
     "connect-mssql": "^1.5.0",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^2.0.4"
   }
 }
