Added Login Redirect and modified Nginx paths.
If users attempt to reach a page without being logged in, they are
redirected to the login page with "?redirect=<original_uri>". Currently
done through: Browser[<uri>] -> Node[<uri>](status 401 Unauthorized) -> Nginx[catch 401](rewrite ->
/login?redirect=<uri>) -> Node[/login](redirect /login.html) -> Browser[/login.html]. Commented out method which instead uses Browser[<uri>] -> Node[<uri>](redirect /login?redirect=<uri>) -> Browser[/login] -> Node[/login](redirect /login.html) -> Browser[/login.html].

Todo:
- Fix/Simplify Node/Browser only redirect to use fewer hops.
- Determine if app needs restructuring

--- a/nginx-1.12.2/conf/nginx.conf
+++ b/nginx-1.12.2/conf/nginx.conf
@@ -40,25 +40,29 @@ http {
 
         #access_log  logs/host.access.log  main;
 
-        location / {
-            root   ../public/html;
-            index  index.html index.htm;
-        }
-
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
         #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   ../public/html;
+		    # In Nginx folders
+            root   html;
+			internal;
         }
 		
-		location /node {
-			rewrite ^/node/?(.*) /$1 break;
+		location = / {
+			root   ../public/html;
+			index  index.html;
+		}
+		
+		location / {
+            add_header X-uri "$uri" always;	
+            add_header X-requri "$request_uri" always;	
 			proxy_set_header Host  $http_host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
 			proxy_set_header X-NginX-Proxy true;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection 'upgrade';
@@ -67,20 +71,65 @@ http {
 			
 		    proxy_pass   http://127.0.0.1:3000;
 			proxy_redirect off;
-			proxy_read_timeout 60s;
+			
+			proxy_connect_timeout  10;
+			proxy_send_timeout     10;
+			proxy_read_timeout     10;
+			send_timeout           10;
+			
+			proxy_intercept_errors on;
+			recursive_error_pages on;
+			error_page 401 = @nodeUnauthorized;
+			error_page 500 502 503 504 = @nodeOutage;
+			# error_page 404 = @nodeNotFound;
+		}
+		
+		location @nodeUnauthorized {
+		    rewrite ^ /login?redirect=$request_uri last;
+		}
+		
+		location @nodeOutage {
+			return 503;
+			error_page 503 /Node-50x.html;
+		}
+		location = /Node-50x.html {
+		    # In Nginx folders
+            root  html; 
+			internal;
+        }
+		
+		location @nodeNotFound {
+			return 404;	
+			error_page 404 /Node-404.html;
+		}
+		location = /Node-404.html {
+		    # In Nginx folders
+            root  html; 
+			internal;
+        }
+		
+		# (\?.*)? pattern matches any get query stuck on the end, if a question mark is present
+		
+		location ~ \.html(\?.*)?$ {
+		    root   ../public/html;
 		}
 
-        location ~ \.css$ {
+        location ~ \.css(\?.*)?$ {
 		    root   ../public/css;
         }
 		
-		location ~ \.js$ {
+		location ~ \.js(\?.*)?$ {
 		    root   ../public/js;
         }
 		
-		location ~ \.(gif|jpg|jpeg|png)$ {
+		location ~ \.(gif|jpg|jpeg|png)(\?.*)?$ {
 		    root   ../public/img;
         }
+		
+		# Catchall location for anything with a file extension (and maybe a get query)
+		location ~ \.[^\s\/\?]*(\?.*)?$ {
+		    root   ../public/misc;
+		}
 
     }
 
