--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "express-session": "^1.15.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "prettier": "1.10.2"
   }
 }
