Removed manditory formater.
Still avalible to run via 'npm run precommit', but will no longer be
called as a git precommit hook.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
     "quotes": ["error", "single"],
     "semi": ["warn", "always"],
     "no-else-return": "warn",
-    "consistent-return": "error",
+    "consistent-return": "warn",
     "no-console": "off"
   }
 }
