--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,15 @@ typings/
 # next.js build output
 .next
 
+
+
+# Nginx
+nginx/*
+!nginx/conf/
+!nginx/README.md
+nginx/conf/*
+!nginx/conf/nginx.conf
+
+
+
 _vimrc_local.vim
