We have a proper DB now!
Configured MySQL connector with Sequelize as a query builder and manager ontop.
Login passwords are hashed.
Passport registration config started.
Google & Facebook login added, configured, and fully functional (getting
the api key was the hardest part)
Added links to login.html for the google and facebook login paths.
Added all necessary packages (and some future ones) to package.json.
Nginx config updated to dissable intercepting Node 50x error pages. They now
pass directly through to the browser client.

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -78,8 +78,7 @@ http {
             
             proxy_intercept_errors on;
             recursive_error_pages on;
-            error_page 401 = @nodeUnauthorized;
-            error_page 500 502 503 504 = @nodeOutage;
+            # error_page 500 502 503 504 = @nodeOutage;
             # error_page 404 = @nodeNotFound;
         }
         
