--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
   "author": "Kayleigh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "latest",
     "body-parser": "^1.18.2",
+    "connect-session-sequelize": "^5.2.0",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "mysql2": "^1.5.2",
+    "nodemailer": "^4.5.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^4.33.4"
   },
   "devDependencies": {
     "eslint": "^4.18.0",
