--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "express": "^4.16.2",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "morgan": "^1.9.0",
     "mysql2": "^1.5.2",
     "nodemailer": "^4.5.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^4.33.4"
+    "sequelize": "^4.33.4",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "^4.18.0",
