--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,10 @@ typings/
 # Local App Config
 app/config/config.json
 
+# App Logs
+app/log/database.log*
+app/log/exception.log*
+
 
 # Nginx
 nginx/*
