Add mailer and update config
Added nodemailer module with a function for sending verification token
emails.
Added mailer settings to config
Update config to have seesion as an object
Update server to reflect session object

--- a/app/config/config.json.example
+++ b/app/config/config.json.example
@@ -6,7 +6,15 @@
     "port": "<DBPort>",
     "name": "<DBName>"
   },
-  "sessionSecret": "<RandomString>",
+  "mailer": {
+    "service": "<nodemailerService>",
+    "address": "<EmailFromAddress>",
+    "username": "<EmailUsername>",
+    "password": "<EmailPassword>"
+  },
+  "session": {
+    "secret": "<RandomString>"
+  },
   "facebook": {
     "clientID": "<AppID>",
     "clientSecret": "<AppSecret>",
