--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -46,7 +46,7 @@ http {
         #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   ../public/html-error;
+            root   ../public/errorpages;
             internal;
         }
         
