--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.2",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "moment": "^2.20.1",
     "morgan": "^1.9.0",
     "mysql2": "^1.5.2",
     "nodemailer": "^4.5.0",
