--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
+    "passport-remember-me-extended": "0.0.3",
     "sequelize": "^4.33.4",
     "winston": "^2.4.0"
   },
