Start styling home page for demo.
Nginx redirects index to login.
Home page added some styling.
Moved where profile.js was putting user display name.

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -51,8 +51,9 @@ http {
         }
         
         location = / {
-            root   ../public/html;
-            index  index.html;
+            return 307 /login; # for demo, go straight to login
+            #root   ../public/html;
+            #index  index.html;
         }
         
         location / {
