--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -103,6 +103,11 @@ http {
             root  ../public/html-error; 
             internal;
         }
+
+        location ^~ /favicon {
+            rewrite ^/favicon(/.*) $1 break;
+            root   ../public/favicon;
+        }
         
         # (\?.*)? pattern matches any get query stuck on the end, if a question mark is present
         
@@ -118,7 +123,7 @@ http {
             root   ../public/js;
         }
         
-        location ~ \.(gif|jpg|jpeg|png)(\?.*)?$ {
+        location ~ \.(gif|jpg|jpeg|png|ico|svg)(\?.*)?$ {
             root   ../public/img;
         }
         
