Added Socket.IO with Sessions
Both Express Sessions and Passport Sessions are working in sockets.
Express: (router) req.session => (socket) socket.request.session
Passport: (router) req.user => (socket) socket.request.user

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-local": "^1.0.0",
     "passport-remember-me-extended": "0.0.3",
     "sequelize": "^4.33.4",
+    "socket.io": "^2.0.4",
     "winston": "^2.4.0"
   },
   "devDependencies": {
