--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -40,6 +40,11 @@ http {
 
         #access_log  logs/host.access.log  main;
 
+
+        # --------------------------------------------------------
+        # Error Handling
+        # --------------------------------------------------------
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
@@ -49,52 +54,20 @@ http {
             root   ../public/errorpages;
             internal;
         }
-        
-        location = / {
-            root   ../public/html;
-            index  index.html;
-        }
-        
-        location / {
-            add_header X-uri "$uri" always; 
-            add_header X-requri "$request_uri" always;  
-            proxy_set_header Host  $http_host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-NginX-Proxy true;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            
-            proxy_cache_bypass $http_upgrade;
-            
-            proxy_pass   http://127.0.0.1:3000;
-            proxy_redirect off;
-            
-            proxy_connect_timeout  10;
-            proxy_send_timeout     10;
-            proxy_read_timeout     10;
-            send_timeout           10;
-            
-            proxy_intercept_errors on;
-            recursive_error_pages on;
-            # error_page 500 502 503 504 = @nodeOutage;
-            # error_page 404 = @nodeNotFound;
-        }
-        
-        location @nodeUnauthorized {
-            rewrite ^ /login?redirect=$request_uri last;
-        }
-        
+
+        # Node 50x Error Page
         location @nodeOutage {
             return 503;
             error_page 503 /Node-50x.html;
         }
         location = /Node-50x.html {
             root  ../public/html-error; 
-            internal;
+            internal; 
+            # internal: Can not be requested by users, 
+            #           only redirected to by nginx internally
         }
         
+        # Node 404 Error Page
         location @nodeNotFound {
             return 404; 
             error_page 404 /Node-404.html;
@@ -104,10 +77,52 @@ http {
             internal;
         }
 
+
+        # --------------------------------------------------------
+        # Index Page
+        # --------------------------------------------------------
+        
+        # Exact Path Match for index
+        location = / {
+            root   ../public/html;
+            index  index.html;
+        }
+
+
+        # --------------------------------------------------------
+        # Base Location Match
+        # --------------------------------------------------------
+
+        # Match Everything
+        #   Can be overidden with more specifit location string
+        #   Can be overidden by regex location match
+        location / {
+            try_files /does_not_exist @nodejs;
+            # Nginx doesn't have great redirect outside of errors
+            # workaround is to try a file that will never exist
+        }
+
+
+        # --------------------------------------------------------
+        # Path Based Location Matches
+        # --------------------------------------------------------
+
+        # Favicon: All favicon related files in own directory
+        #   ^~ tells nginx to stop location matching (aka not run regex location matching)
         location ^~ /favicon {
             rewrite ^/favicon(/.*) $1 break;
             root   ../public/favicon;
         }
+
+        # Forward all socket.io connections to node
+        location ^~ /socket.io/ {
+            try_files /does_not_exist @nodejs;
+        }
+
+
+        # --------------------------------------------------------
+        # Regex Based Location Matches
+        # --------------------------------------------------------
         
         # (\?.*)? pattern matches any get query stuck on the end, if a question mark is present
         
@@ -130,6 +145,36 @@ http {
         # Catchall location for anything with a file extension (and maybe a get query)
         location ~ \.[^\s\/\?]*(\?.*)?$ {
             root   ../public/misc;
+        }
+
+
+        # --------------------------------------------------------
+        # Node Proxy
+        # --------------------------------------------------------
+        
+        location @nodejs {
+            proxy_set_header Host  $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-NginX-Proxy true;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            
+            proxy_cache_bypass $http_upgrade;
+            
+            proxy_pass   http://127.0.0.1:3000;
+            proxy_redirect off;
+            
+            proxy_connect_timeout  10;
+            proxy_send_timeout     10;
+            proxy_read_timeout     10;
+            send_timeout           10;
+            
+            proxy_intercept_errors on;
+            recursive_error_pages on;
+            # error_page 500 502 503 504 = @nodeOutage;
+            # error_page 404 = @nodeNotFound;
         }
 
     }
