--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -138,7 +138,7 @@ http {
             root   ../public/js;
         }
         
-        location ~ \.(gif|jpg|jpeg|png|ico|svg)(\?.*)?$ {
+        location ~ \.(gif|jpg|jpeg|png|ico|svg|ttf|woff|eot)(\?.*)?$ {
             root   ../public/img;
         }
         
